redeploying because prev deploy stuck in queue on github, unknown issue

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -49,7 +49,7 @@
   position: fixed;
   width: max(6vw,100px);
   bottom: 3vh;
-  left: 50%;
+  left: 49.5%;
   margin-left: min(-3vw, -50px);
   text-align: center;
   color: white;
